style.scss
@import url('https://fonts.googleapis.com/css?family=Montserrat|Montserrat+Subrayada&display=swap');

$hamburgerWidth: 300px;
$mobileThreshold: 800px;

html {
    scroll-behavior: smooth;
  }

body {
    background-color: #292929;
    font-family: 'Montserrat', sans-serif;
    padding: 0;
    margin: 0;
}

#social-links {
    position: fixed;
    top: 0;
    right: 0;

    img {
        width: 34px;
        margin: 5px;
    }
}

#content {
    .section {
        height: 100vh;
        width: 100vw;
        padding-top: 75px;
        padding-left: 200px;

        @media only screen and (max-width: $mobileThreshold) {
            padding-top: 50px;
            padding-left: 50px;   
        }    

        .title {
            font-size: 6em;
            color: white;
            font-family: 'Montserrat Subrayada', sans-serif;

            @media only screen and (max-width: $mobileThreshold) {
                font-size: 2em; 
            }    
        }
    }
    
}

#about-me {
    color: white;
    width: 1000px;
    max-width: 70%;

    @media only screen and (max-width: $mobileThreshold) {
        font-size: 0.75em; 
    } 
}

#navigation {
    a {
        color: grey;
    }
}

.work-example {
    font-family: 'Montserrat', sans-serif;

    #header {
        font-size: 2em;
        color: white;

        @media only screen and (max-width: $mobileThreshold) {
            font-size: 1.5em; 
        } 
        
    }

    #date {
        font-size: 0.75em;
        color: grey;
    }

    a {
        position: absolute;
        font-size: 1em;
        color: grey;
    }

    #text {
        width: 800px;
        font-size: 1em;
        color: white;
        max-width: 70%;

        @media only screen and (max-width: $mobileThreshold) {
            font-size: 0.75em; 
        } 
    }

    #quote {
        width: 800px;
        color: grey;
        font-size: 1em;
        margin-left: 50px;

        max-width: 70%;

        @media only screen and (max-width: $mobileThreshold) {
            font-size: 0.75em; 
        }
    }

    #list-header {
        font-size: 1em;
        color: white;

        @media only screen and (max-width: $mobileThreshold) {
            font-size: 0.75em; 
        }
    }

    ul {
        font-size: 1em;
        color: white;

        @media only screen and (max-width: $mobileThreshold) {
            font-size: 0.75em; 
        }
    }    
}

#hamburger-button {
    z-index: 2;
    color: white;

    top: 0;
    left: 0;
    position: fixed;

    cursor: pointer;

    width: fit-content;
    height: fit-content;

    margin: 10px;

    i {
        font-size: 35px;
    }
}

#hamburger {
    height: 100%;
    width: $hamburgerWidth;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 1;
    background-color: #4F5D6E;

    #hamburger-content {
        width: 100%;
        margin-top: 100px;

        a {
            color: white;
            text-decoration: none;
        }
    }
}

.hamburger-not-displayed {
    transform: translateX(-100%);
    transition: all 0.5s ease-in-out;
}

.hamburger-displayed {
    transform: translateX(0);
    transition: all 0.5s ease-in-out;
}

